<resources>
    <string name="app_name">121140139_Faisal_UTS_Pengembangan_Aplikasi_Mobile</string>
    <string name="image_logo">Image Logo</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun_daftar_disini">Belum punya akun? Daftar disini</string>
    <string name="username">Username</string>
    <string name="email">email</string>
    <string name="github">github</string>
    <string name="nik">NIK</string>
    <string name="register_button">register button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>